10246
I don't know if it's relevant, but the problematic expressions also do not reify. Using scalaz as a library you get 
```scala
scala> reflect.runtime.universe.reify { Left(1).disjunction }
<console>:17: error: macro has not been expanded
              reflect.runtime.universe.reify { Left(1).disjunction }
                                       ^
```

and using the REPL example you get 
```scala
scala> reflect.runtime.universe.reify { Left(1).disjunction }
<console>:15: error: this type parameter must be specified
              reflect.runtime.universe.reify { Left(1).disjunction }
                                       ^
```
